Enlaces para todas las vistas

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,5 +2,5 @@
 
 <p><%=link_to 'Acerca de nosotros', aboutUS_path %>/p>
 
-<p><%=link_to 'contactenos', contactUS_path %>/p>
+<p><%=link_to 'Contactenos', contactUS_path %>/p>
 
