--- a/app/views/pages/aboutUS.html.erb
+++ b/app/views/pages/aboutUS.html.erb
@@ -1,2 +1,5 @@
 <h1>Esto fue creado por Falperezgo</h1>
 <p>falperezgo@unal.edu.co</p>
+
+<p><%=link_to 'Inicio', root_path %>/p>
+<p><%=link_to 'Contactenos', contactUS_path %>/p>
