--- a/app/views/pages/contactUS.html.erb
+++ b/app/views/pages/contactUS.html.erb
@@ -1,2 +1,7 @@
 <h1>Esto fue creado por Leoalbirojo</h1>
 <p>leoalbirojo@gmail.com</p>
+
+<p><%=link_to 'Inicio', root_path %>/p>
+<p><%=link_to 'Acerca de nosotros', aboutUS_path %>/p>
+
+
