New Feature Messages CRUD

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Bienvenidos a Ingesoft</h1>
 
+
+<p><%=link_to 'Messages', messages_path %>/p>
+
 <p><%=link_to 'Acerca de nosotros', aboutUS_path %>/p>
 
 <p><%=link_to 'Contactenos', contactUS_path %>/p>
